PP updated and thermo
Comprehensive update of the polypropylene mechanisms in line with the update for PE.

Thermodynamic properties for the semi-detailed and reduced models are also introduced. These are obtained neglecting difference between head and tail configurations. For condensed-phase degradation the assumptions are reasonable, or gas-phase it may require further verification

--- a/PP/PP_reduced/LiquidProperties/unifacTableCoeffs.cfg
+++ b/PP/PP_reduced/LiquidProperties/unifacTableCoeffs.cfg
@@ -16,70 +16,77 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42-P";
+	subGroupName = "P-IC30H60-P_S";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41-P";
+	subGroupName = "P-IC30H60-P";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H43t";
+	subGroupName = "P-IC30H59-P";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H43h";
+	subGroupName = "P-IC30H61t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41t";
+	subGroupName = "P-IC30H61h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41h";
+	subGroupName = "P-IC30H59t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42t";
+	subGroupName = "P-IC30H59h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42h";
+	subGroupName = "P-IC30H60t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40t";
+	subGroupName = "P-IC30H60h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40h";
+	subGroupName = "P-IC30H58t";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "P-IC30H58h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -149,6 +156,27 @@ unifac =
 	Q =0.848;
 	},
 {
+	subGroupName = "IC11H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H26";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H28";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
 	subGroupName = "IC17H36";
 	mainGroup = 1;
 	subGroup =1;
@@ -184,7 +212,7 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "C5H10_2";
+	subGroupName = "C5H10-2";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -220,6 +248,27 @@ unifac =
 	},
 {
 	subGroupName = "IC10H20";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC11H22";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H26";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -282,6 +331,27 @@ unifac =
 	Q =0.848;
 	},
 {
+	subGroupName = "IC11H20";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H22";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
 	subGroupName = "IC17H32";
 	mainGroup = 1;
 	subGroup =1;
@@ -297,69 +367,6 @@ unifac =
 	},
 {
 	subGroupName = "IC19H36";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC26H54";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC26H52";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC26H50";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC27H56";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC27H54";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC27H52";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC28H58";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC28H56";
-	mainGroup = 1;
-	subGroup =1;
-	R = 0.9011;
-	Q =0.848;
-	},
-{
-	subGroupName = "IC28H54";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -429,63 +436,63 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H53";
+	subGroupName = "IC56H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H51";
+	subGroupName = "IC56H112";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H49";
+	subGroupName = "IC56H110";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H55";
+	subGroupName = "IC57H116";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H53";
+	subGroupName = "IC57H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H51";
+	subGroupName = "IC57H112";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H57";
+	subGroupName = "IC58H118";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H55";
+	subGroupName = "IC58H116";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H53";
+	subGroupName = "IC58H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -549,6 +556,69 @@ unifac =
 	},
 {
 	subGroupName = "IC37H71";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H113";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H111";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H109";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H115";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H113";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H111";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H117";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H115";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H113";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
