--- a/PP/PP_semidetailed/LiquidProperties/unifacTableCoeffs.cfg
+++ b/PP/PP_semidetailed/LiquidProperties/unifacTableCoeffs.cfg
@@ -16,98 +16,105 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42-P";
+	subGroupName = "P-IC30H60-P_S";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41-P";
+	subGroupName = "P-IC30H60-P";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H43t";
+	subGroupName = "P-IC30H59-P";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H43h";
+	subGroupName = "P-IC30H61t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41t";
+	subGroupName = "P-IC30H61h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H41h";
+	subGroupName = "P-IC30H59t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42t";
+	subGroupName = "P-IC30H59h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42t_T";
+	subGroupName = "P-IC30H60t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42h";
+	subGroupName = "P-IC30H60t_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H42h_T";
+	subGroupName = "P-IC30H60h";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40t";
+	subGroupName = "P-IC30H60h_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40t_A";
+	subGroupName = "P-IC30H58t";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40h";
+	subGroupName = "P-IC30H58t_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "P-IC21H40h_A";
+	subGroupName = "P-IC30H58h";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "P-IC30H58h_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -177,6 +184,27 @@ unifac =
 	Q =0.848;
 	},
 {
+	subGroupName = "IC11H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H26";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H28";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
 	subGroupName = "IC17H36";
 	mainGroup = 1;
 	subGroup =1;
@@ -212,7 +240,7 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "C5H10_2";
+	subGroupName = "C5H10-2";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -248,6 +276,27 @@ unifac =
 	},
 {
 	subGroupName = "IC10H20";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC11H22";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H26";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -310,6 +359,27 @@ unifac =
 	Q =0.848;
 	},
 {
+	subGroupName = "IC11H20";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC12H22";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC13H24";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
 	subGroupName = "IC17H32";
 	mainGroup = 1;
 	subGroup =1;
@@ -331,420 +401,630 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H54";
+	subGroupName = "IC29H60";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H52";
+	subGroupName = "IC29H58";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H50";
+	subGroupName = "IC29H56";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H56";
+	subGroupName = "IC30H62";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H54";
+	subGroupName = "IC30H60";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H52";
+	subGroupName = "IC30H58";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H58";
+	subGroupName = "IC31H64";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H56";
+	subGroupName = "IC31H62";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H54";
+	subGroupName = "IC31H60";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H72";
+	subGroupName = "IC44H90";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H70";
+	subGroupName = "IC44H88";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H68";
+	subGroupName = "IC44H86";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H74";
+	subGroupName = "IC45H92";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H72";
+	subGroupName = "IC45H90";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H70";
+	subGroupName = "IC45H88";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H76";
+	subGroupName = "IC46H94";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H74";
+	subGroupName = "IC46H92";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H72";
+	subGroupName = "IC46H90";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H53";
+	subGroupName = "IC56H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H53_T";
+	subGroupName = "IC56H112";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H51";
+	subGroupName = "IC56H110";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H51_T";
+	subGroupName = "IC57H116";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H51_A";
+	subGroupName = "IC57H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H49";
+	subGroupName = "IC57H112";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC26H49_A";
+	subGroupName = "IC58H118";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H55";
+	subGroupName = "IC58H116";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H55_T";
+	subGroupName = "IC58H114";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H53";
+	subGroupName = "IC29H59";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H53_T";
+	subGroupName = "IC29H59_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H53_A";
+	subGroupName = "IC29H57";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H51";
+	subGroupName = "IC29H57_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC27H51_A";
+	subGroupName = "IC29H57_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H57";
+	subGroupName = "IC29H55";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H57_T";
+	subGroupName = "IC29H55_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H55";
+	subGroupName = "IC30H61";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H55_T";
+	subGroupName = "IC30H61_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H55_A";
+	subGroupName = "IC30H59";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H53";
+	subGroupName = "IC30H59_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC28H53_A";
+	subGroupName = "IC30H59_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H71";
+	subGroupName = "IC30H57";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H71_T";
+	subGroupName = "IC30H57_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H69";
+	subGroupName = "IC31H63";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H69_T";
+	subGroupName = "IC31H63_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H69_A";
+	subGroupName = "IC31H61";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H67";
+	subGroupName = "IC31H61_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC35H67_A";
+	subGroupName = "IC31H61_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H73";
+	subGroupName = "IC31H59";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H73_T";
+	subGroupName = "IC31H59_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H71";
+	subGroupName = "IC44H89";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H71_T";
+	subGroupName = "IC44H89_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H71_A";
+	subGroupName = "IC44H87";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H69";
+	subGroupName = "IC44H87_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC36H69_A";
+	subGroupName = "IC44H87_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H75";
+	subGroupName = "IC44H85";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H75_T";
+	subGroupName = "IC44H85_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H73";
+	subGroupName = "IC45H91";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H73_T";
+	subGroupName = "IC45H91_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H73_A";
+	subGroupName = "IC45H89";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H71";
+	subGroupName = "IC45H89_T";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
 	Q =0.848;
 	},
 {
-	subGroupName = "IC37H71_A";
+	subGroupName = "IC45H89_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC45H87";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC45H87_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H93";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H93_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H91";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H91_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H91_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H89";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC46H89_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H113";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H113_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H111";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H111_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H111_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H109";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC56H109_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H115";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H115_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H113";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H113_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H113_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H111";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC57H111_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H117";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H117_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H115";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H115_T";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H115_A";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H113";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "IC58H113_A";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
