PS comprehensive update
Updated the semi-detailed mechanism to improve allyl-types description.
The resulting model has slightly worse predictions in degradation temperatures (TG profiles a bit too smooth), but has significant improvements to the volatiles yields (R^2 of 0.88 for styrene and 0.91 for dimer).
The reduced and skeletal models have been updated to reflect the improvements.
Updated also the initial species of skeletal model to be uniform with the other two.
Validated and improve thermochemistry as well.

--- a/PS/PS_skeletal/LiquidProperties/unifacTableCoeffs.cfg
+++ b/PS/PS_skeletal/LiquidProperties/unifacTableCoeffs.cfg
@@ -16,7 +16,7 @@ unifac =
 	Q =0.848;
 	},
 {
-	subGroupName = "P-C32H32-P";
+	subGroupName = "P-C16H16-P";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
@@ -24,6 +24,13 @@ unifac =
 	},
 {
 	subGroupName = "C8H8";
+	mainGroup = 1;
+	subGroup =1;
+	R = 0.9011;
+	Q =0.848;
+	},
+{
+	subGroupName = "C7H8";
 	mainGroup = 1;
 	subGroup =1;
 	R = 0.9011;
