--- a/PS/PS_skeletal/LiquidProperties/speciesSettings.cfg
+++ b/PS/PS_skeletal/LiquidProperties/speciesSettings.cfg
@@ -30,7 +30,7 @@ speciesName = "HE";
 	sigmaEq = 1;
 	},
 	{
-speciesName = "P-C32H32-P";
+speciesName = "P-C16H16-P";
 	pVapEq = 2;
 	deltaHvEq = 1;
 	etaLEq = 1;
@@ -44,6 +44,19 @@ speciesName = "P-C32H32-P";
 	},
 	{
 speciesName = "C8H8";
+	pVapEq = 2;
+	deltaHvEq = 1;
+	etaLEq = 1;
+	etaGEq = 1;
+	cpLEq = 2;
+	cpGEq = 1;
+	lambdaLEq = 1;
+	lambdaGEq = 1;
+	rhoLEq = 1;
+	sigmaEq = 1;
+	},
+	{
+speciesName = "C7H8";
 	pVapEq = 2;
 	deltaHvEq = 1;
 	etaLEq = 1;
@@ -112,8 +125,9 @@ molarMass =
 {
 N2                  =  0.674;
 HE                  =  0.674;
-P-C32H32-P          =  0.674;
+P-C16H16-P          =  0.674;
 C8H8                =  0.674;
+C7H8                =  0.674;
 C16H16              =  0.674;
 C15H16              =  0.674;
 C24H24              =  0.674;
@@ -123,8 +137,9 @@ Tcrit =
 {
 N2                  =  1500.0;
 HE                  =  1500.0;
-P-C32H32-P          =  1500.0;
+P-C16H16-P          =  1500.0;
 C8H8                =  685.2;
+C7H8                =  619.2;
 C16H16              =  817.0;
 C15H16              =  786.1;
 C24H24              =  896.3;
@@ -134,8 +149,9 @@ pCrit =
 {
 N2                  =  140000.0;
 HE                  =  140000.0;
-P-C32H32-P          =  140000.0;
+P-C16H16-P          =  140000.0;
 C8H8                =  3886655.3;
+C7H8                =  4302952.0;
 C16H16              =  2426396.5;
 C15H16              =  2681170.3;
 C24H24              =  1703146.1;
@@ -145,8 +161,9 @@ rhoCrit =
 {
 N2                  =  240.0;
 HE                  =  240.0;
-P-C32H32-P          =  240.0;
+P-C16H16-P          =  240.0;
 C8H8                =  3450.8;
+C7H8                =  3486.2;
 C16H16              =  3582.6;
 C15H16              =  3586.5;
 C24H24              =  3796.7;
@@ -156,8 +173,9 @@ Tnbp =
 {
 N2                  =  1500.0;
 HE                  =  1500.0;
-P-C32H32-P          =  1500.0;
+P-C16H16-P          =  1500.0;
 C8H8                =  453.0;
+C7H8                =  402.2;
 C16H16              =  584.9;
 C15H16              =  555.6;
 C24H24              =  681.4;
@@ -167,8 +185,9 @@ dipolMoment =
 {
 N2                  =  0.0;
 HE                  =  0.0;
-P-C32H32-P          =  0.0;
+P-C16H16-P          =  0.0;
 C8H8                =  0.0;
+C7H8                =  0.0;
 C16H16              =  0.0;
 C15H16              =  0.0;
 C24H24              =  0.0;
@@ -178,8 +197,9 @@ acentric =
 {
 N2                  =  0.0;
 HE                  =  0.0;
-P-C32H32-P          =  0.0;
+P-C16H16-P          =  0.0;
 C8H8                =  0.3186;
+C7H8                =  0.2862;
 C16H16              =  0.5016;
 C15H16              =  0.4777;
 C24H24              =  0.7027;
@@ -189,8 +209,9 @@ deltaV =
 {
 N2                  =  332.4;
 HE                  =  332.4;
-P-C32H32-P          =  332.4;
+P-C16H16-P          =  332.4;
 C8H8                =  332.4;
+C7H8                =  332.4;
 C16H16              =  332.4;
 C15H16              =  332.4;
 C24H24              =  332.4;
@@ -200,8 +221,9 @@ pVap =
 {
 N2 = [-100.0,0.0,0.0,0.0,0.0,0.0,0.0];
 HE = [-100.0,0.0,0.0,0.0,0.0,0.0,0.0];
-P-C32H32-P = [-100.0,0.0,0.0,0.0,0.0,0.0,0.0];
+P-C16H16-P = [-100.0,0.0,0.0,0.0,0.0,0.0,0.0];
 C8H8 = [46.54104170302843,-3999.2953593031207,-14.177022651789848,0.006832838123417376,-1.3180319583018123e-06,0.0,0.0];
+C7H8 = [35.40733796737257,-3153.885327666686,-10.172749853751666,0.0048714133082850015,-9.361453896527766e-07,0.0,0.0];
 C16H16 = [91.46205184712953,-7066.141749509518,-30.43924554529461,0.014915342631061916,-2.905179175861253e-06,0.0,0.0];
 C15H16 = [78.69490933283407,-6226.113634243187,-25.812914378484507,0.01260231186495998,-2.4493851823850523e-06,0.0,0.0];
 C24H24 = [147.85457817034666,-10587.097981174924,-50.947114101846566,0.025263682284541095,-4.955536288224501e-06,0.0,0.0];
@@ -211,8 +233,9 @@ deltaHv =
 {
 N2                  = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
 HE                  = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
-P-C32H32-P          = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
+P-C16H16-P          = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
 C8H8                = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
+C7H8                = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
 C16H16              = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
 C15H16              = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
 C24H24              = [451237.0, 0.48815, -0.069868, 0.063095, -0.022365];
@@ -222,8 +245,9 @@ cpL =
 {
 N2                  = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
 HE                  = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
-P-C32H32-P          = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
+P-C16H16-P          = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
 C8H8                = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
+C7H8                = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
 C16H16              = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
 C15H16              = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
 C24H24              = [1124.6, 3.559, 0.0, 0.0e-02, 0.0e-03];
@@ -233,8 +257,9 @@ cpG =
 {
 N2                  = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
 HE                  = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
-P-C32H32-P          = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
+P-C16H16-P          = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
 C8H8                = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
+C7H8                = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
 C16H16              = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
 C15H16              = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
 C24H24              = [-125.3, 7.087, -0.004212, 0.000985e-03, 0.000708e-03];
@@ -244,8 +269,9 @@ lambdaL =
 {
 N2                  = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 HE                  = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
-P-C32H32-P          = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
+P-C16H16-P          = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C8H8                = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
+C7H8                = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C16H16              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C15H16              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C24H24              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
@@ -255,8 +281,9 @@ lambdaG =
 {
 N2                  = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 HE                  = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
-P-C32H32-P          = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
+P-C16H16-P          = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C8H8                = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
+C7H8                = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C16H16              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C15H16              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
 C24H24              = [-6.29e-03, 0.019e-03, 0.06793e-06, 0.0, 0.0];
@@ -266,8 +293,9 @@ etaL =
 {
 N2                  = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
 HE                  = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
-P-C32H32-P          = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
+P-C16H16-P          = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
 C8H8                = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
+C7H8                = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
 C16H16              = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
 C15H16              = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
 C24H24              = [-11.991, 1847.73, -0.000462, 0.00154e-03, 0.0e-06];
@@ -277,8 +305,9 @@ etaG =
 {
 N2                  = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
 HE                  = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
-P-C32H32-P          = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
+P-C16H16-P          = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
 C8H8                = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
+C7H8                = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
 C16H16              = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
 C15H16              = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
 C24H24              = [-0.13795e-05, 0.16148e-07, -0.00748e-10, 0.0, 0.0];
@@ -288,8 +317,9 @@ rhoL =
 {
 N2                  = [760.0, 1., 1., 1.];
 HE                  = [760.0, 1., 1., 1.];
-P-C32H32-P          = [760.0, 1., 1., 1.];
+P-C16H16-P          = [760.0, 1., 1., 1.];
 C8H8                = [760.0, 1., 1., 1.];
+C7H8                = [760.0, 1., 1., 1.];
 C16H16              = [760.0, 1., 1., 1.];
 C15H16              = [760.0, 1., 1., 1.];
 C24H24              = [760.0, 1., 1., 1.];
@@ -299,8 +329,9 @@ sigma =
 {
 N2                  = [0.05742, 1.40834];
 HE                  = [0.05742, 1.40834];
-P-C32H32-P          = [0.05742, 1.40834];
+P-C16H16-P          = [0.05742, 1.40834];
 C8H8                = [0.05742, 1.40834];
+C7H8                = [0.05742, 1.40834];
 C16H16              = [0.05742, 1.40834];
 C15H16              = [0.05742, 1.40834];
 C24H24              = [0.05742, 1.40834];
@@ -310,8 +341,9 @@ NRTL =
 {
 	speciesNames = ["N2",
 "HE",
-"P-C32H32-P",
+"P-C16H16-P",
 "C8H8",
+"C7H8",
 "C16H16",
 "C15H16",
 "C24H24",
@@ -320,8 +352,9 @@ A =
 {
 N2                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 HE                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
-P-C32H32-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+P-C16H16-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C8H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+C7H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C16H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C15H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C24H24              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
@@ -331,8 +364,9 @@ B =
 {
 N2                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 HE                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
-P-C32H32-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+P-C16H16-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C8H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+C7H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C16H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C15H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C24H24              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
@@ -342,8 +376,9 @@ C =
 {
 N2                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 HE                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
-P-C32H32-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+P-C16H16-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C8H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+C7H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C16H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C15H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C24H24              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
@@ -353,8 +388,9 @@ D =
 {
 N2                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 HE                  = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
-P-C32H32-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+P-C16H16-P          = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C8H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
+C7H8                = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C16H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C15H16              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
 C24H24              = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0];
@@ -365,8 +401,9 @@ UNIFAC =
 {
 N2 = (),
 HE = (),
-P-C32H32-P = (),
+P-C16H16-P = (),
 C8H8 = (),
+C7H8 = (),
 C16H16 = (),
 C15H16 = (),
 C24H24 = (),
